# dicto

./: .gitignore  MLKIT_GENAI_SPEECH.md  Makefile  README.md  TEXT_ANALYSIS.md  VOSK.md  WHISPER.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/mhlotto/dicto/: DictoApplication.kt  MainActivity.kt
app/src/main/java/com/mhlotto/dicto/analysis/: MlKitEntityTextAnalyzer.kt  TextAnalyzer.kt
app/src/main/java/com/mhlotto/dicto/audio/: PcmAudioRecorder.kt
app/src/main/java/com/mhlotto/dicto/data/: DictoDatabase.kt  DictoRepository.kt  NoteDao.kt  NoteEntity.kt  ProjectDao.kt  ProjectEntity.kt
app/src/main/java/com/mhlotto/dicto/speech/: DictationEngine.kt  DictationEngineFactory.kt  DictationEngineSettings.kt  MlKitGenAiSpeechDictationEngine.kt  MlKitSpeechAvailability.kt  SpeechRecognizerDictationEngine.kt  VoskDictationEngine.kt  VoskModelManager.kt  VoskResult.kt  WhisperDictationEngine.kt  WhisperModelConfig.kt  WhisperModelManager.kt
app/src/main/java/com/mhlotto/dicto/ui/: AppViewModel.kt  DictationCommandFormatter.kt  DictationCommandSettings.kt  DictationSpanCommandProcessor.kt  ExportText.kt  SpokenNumberParser.kt
app/src/main/java/com/mhlotto/dicto/whisper/: WhisperNative.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/mhlotto/dicto/ui/: DictationSpanCommandProcessorTest.kt
gradle/: libs.versions.toml
